syntax = "proto3";

import "gogoproto/gogo.proto";
import "x/configuration/types/types.proto";
import "google/api/annotations.proto";

option go_package = "github.com/iov-one/wasmd/x/configuration/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = true;

// QueryConfigRequest is the request type for the Query/Configuration RPC method.
message QueryConfigRequest {
}

// QueryConfigResponse is the response type for the Query/Configuration RPC method.
message QueryConfigResponse {
    // Configuration is the starname configuration.
    Config config = 1 [(gogoproto.jsontag) = "config"];
}

// QueryFeesRequest is the request type for the Query/Configuration RPC method.
message QueryFeesRequest {
}

// QueryFeesResponse is the response type for the Query/Fees RPC method
message QueryFeesResponse {
    // Fees is the starname product fee object.
    Fees fees = 1 [(gogoproto.jsontag) = "fees"];
}

// Query provides defines the gRPC querier service.
service Query {
   // Config gets starname configuration.
   rpc Config (QueryConfigRequest) returns (QueryConfigResponse) {
       option (google.api.http).get = "/wasm/v1beta1/configuration/config";
   }
   // Fees gets starname product fees.
   rpc Fees (QueryFeesRequest) returns (QueryFeesResponse) {
       option (google.api.http).get = "/wasm/v1beta1/configuration/fees";
   }
}
